feat: adicionar endpoint para listagem de inscrições por CPF
- Implementar novo endpoint na API para retornar lista paginada de inscrições realizadas por um usuário, identificado pelo CPF.
- Atualizar a documentação OpenAPI e Swagger para incluir a nova rota, parâmetros e respostas, garantindo clareza para os desenvolvedores.
- Remover endpoint antigo que utilizava a rota /api/v1/users/{cpf}/enrollments, substituindo pela nova estrutura.
